# z

./: .gitattributes  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  WORKSPACE  rclone_filter.txt
data/genesis/caffe/trained_models/2016_01_05_2330_palm/: handnet.model.prototxt  handnet.solver.prototxt  handnet_deploy.solver.prototxt  handnet_solver.prototxt  handnet_solver_deploy.prototxt
data/genesis/caffe/trained_models/2016_01_09_1830_palm_heatmap/: handnet.caffemodel  handnet.model.prototxt  handnet.solver.prototxt  handnet.solverstate  handnet_deploy.model.prototxt  handnet_deploy.solver.prototxt
data/genesis/caffe/trained_models/2016_01_09_2230_palm_heatmap/: handnet.caffemodel  handnet.solver.prototxt  handnet.solverstate  handnet_deploy.solver.prototxt
src/genesis/: BUILD  frame_recorder.cc  frame_recorder.h  gl_utils.cc  gl_utils.h  gl_window.cc  gl_window.h  hello-fail.cc  hello-lib.cc  hello-lib.h  hello-world.cc  image_viewer.cc  image_viewer.h  lmdb_storage.cc  lmdb_storage.h  main.cc  proto_to_lmdb_converter.cc  proto_to_lmdb_converter.h  proto_to_lmdb_converter_main.cc  texture_shader.cc  texture_shader.h  undistorted_texture_shader.cc  undistorted_texture_shader.h  visualizer.cc  visualizer.h
src/genesis/assets/: texture_undistort.frag
src/genesis/caffe/: BUILD  hand_neural_net.cc  hand_neural_net.h  handnet.model.prototxt  handnet.solver.prototxt  handnet_deploy.model.prototxt  handnet_deploy.prototxt  handnet_deploy.solver.prototxt  handnet_iter_10000.caffemodel  handnet_iter_10000.solverstate  handnet_iter_5000.caffemodel  handnet_iter_5000.solverstate  handnet_solver.prototxt  handnet_solver_deploy.prototxt  handnet_test.sh  handnet_train.sh  handnet_train_test.prototxt  mnist.model.prototxt  mnist.solver.prototxt  mnist_deploy.model.prototxt  mnist_deploy.prototxt  mnist_solver.prototxt  mnist_train_test.prototxt
src/genesis/caffe/input/handnet_test_lmdb/: data.mdb
src/genesis/caffe/input/handnet_train_lmdb/: data.mdb
src/genesis/caffe/mnist_train_lmdb/: data.mdb.REMOVED.git-id
src/genesis/caffe/snapshots/: handnet_iter_10000.caffemodel  handnet_iter_10000.solverstate  handnet_iter_5000.caffemodel  handnet_iter_5000.solverstate
src/genesis/data/: fragment.glsl  vertex.glsl
src/genesis/io/: BUILD  conversion_utils.cc  conversion_utils.h  datatypes.h  frame_recorder.cc  frame_recorder.h  lmdb_storage.cc  lmdb_storage.h  proto_iterator.cc  proto_iterator.h  proto_to_lmdb_converter.cc  proto_to_lmdb_converter.h  proto_to_lmdb_converter_main.cc  proto_to_tf_records_converter.cc  proto_to_tf_records_converter.h  proto_to_tf_records_converter_main.cc
src/genesis/io/proto/: BUILD  gen_proto.bzl  leap_frame.proto  metadata.proto
src/genesis/proto/: BUILD
src/genesis/tensorflow/: BUILD  fully_connected_feed.py  mnist_softmax.py  mnist_with_summaries.py
src/genesis/tensorflow/inference/android/: BUILD  README.md
src/genesis/tensorflow/inference/android/assets/: tensorflow_inception_graph.pb.REMOVED.git-id
src/genesis/tensorflow/inference/android/jni/: imageutils_jni.cc  jni_utils.cc  rgb2yuv.cc  tensorflow_jni.cc  tensorflow_jni.h  yuv2rgb.cc
src/genesis/tensorflow/train/: BUILD  fully_connected_feed.py  mnist_softmax.py  train.py
src/genesis/tensorflow/train/mnist/: mnist_with_summaries.py
src/genesis/test/: BUILD
src/genesis/tools/: archive_data.sh  handnet_test.sh  handnet_time.sh  handnet_train.sh  mnist_train.sh  pull_data.sh  save_model.sh
src/genesis/visualization/: BUILD  gl_utils.cc  gl_utils.h  gl_window.cc  gl_window.h  image_viewer.cc  image_viewer.h  texture_shader.cc  texture_shader.h  undistorted_texture_shader.cc  undistorted_texture_shader.h  visualizer.cc  visualizer.h  visualizer_main.cc
src/genesis/visualization/shaders/: fullscreen_quad.vert  texture.frag
