cmake_minimum_required(VERSION 3.6)
project(blaze_root)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(INCLUDE_DIRS
    .
    bazel-genfiles)
include_directories(${INCLUDE_DIRS})


set(SOURCE_FILES
    src/genesis/caffe/BUILD
    src/genesis/caffe/hand_neural_net.cc
    src/genesis/caffe/hand_neural_net.h
    src/genesis/caffe/handnet.model.prototxt
    src/genesis/caffe/handnet.solver.prototxt
    src/genesis/caffe/handnet_deploy.model.prototxt
    src/genesis/caffe/handnet_deploy.solver.prototxt
    src/genesis/caffe/mnist.model.prototxt
    src/genesis/caffe/mnist.solver.prototxt
    src/genesis/caffe/mnist_deploy.model.prototxt
    src/genesis/io/proto/BUILD
    src/genesis/io/proto/leap_frame.proto
    src/genesis/io/proto/metadata.proto
    src/genesis/io/BUILD
    src/genesis/io/conversion_utils.cc
    src/genesis/io/conversion_utils.h
    src/genesis/io/datatypes.h
    src/genesis/io/frame_recorder.cc
    src/genesis/io/frame_recorder.h
    src/genesis/io/lmdb_storage.cc
    src/genesis/io/lmdb_storage.h
    src/genesis/io/proto_to_lmdb_converter.cc
    src/genesis/io/proto_to_lmdb_converter.h
    src/genesis/io/proto_to_lmdb_converter_main.cc
    src/genesis/tensorflow/inference/android/assets/imagenet_comp_graph_label_strings.txt
    src/genesis/tensorflow/inference/android/assets/LICENSE
    src/genesis/tensorflow/inference/android/assets/tensorflow_inception_graph.pb
    src/genesis/tensorflow/inference/android/jni/__init__.py
    src/genesis/tensorflow/inference/android/jni/imageutils_jni.cc
    src/genesis/tensorflow/inference/android/jni/jni_utils.cc
    src/genesis/tensorflow/inference/android/jni/jni_utils.h
    src/genesis/tensorflow/inference/android/jni/limiting_file_input_stream.h
    src/genesis/tensorflow/inference/android/jni/rgb2yuv.cc
    src/genesis/tensorflow/inference/android/jni/rgb2yuv.h
    src/genesis/tensorflow/inference/android/jni/tensorflow_jni.cc
    src/genesis/tensorflow/inference/android/jni/tensorflow_jni.h
    src/genesis/tensorflow/inference/android/jni/yuv2rgb.cc
    src/genesis/tensorflow/inference/android/jni/yuv2rgb.h
    src/genesis/tensorflow/inference/android/res/drawable-hdpi/ic_action_info.png
    src/genesis/tensorflow/inference/android/res/drawable-hdpi/ic_launcher.png
    src/genesis/tensorflow/inference/android/res/drawable-hdpi/tile.9.png
    src/genesis/tensorflow/inference/android/res/drawable-mdpi/ic_action_info.png
    src/genesis/tensorflow/inference/android/res/drawable-mdpi/ic_launcher.png
    src/genesis/tensorflow/inference/android/res/drawable-xhdpi/ic_action_info.png
    src/genesis/tensorflow/inference/android/res/drawable-xhdpi/ic_launcher.png
    src/genesis/tensorflow/inference/android/res/drawable-xxhdpi/ic_action_info.png
    src/genesis/tensorflow/inference/android/res/drawable-xxhdpi/ic_launcher.png
    src/genesis/tensorflow/inference/android/res/layout/activity_camera.xml
    src/genesis/tensorflow/inference/android/res/layout/camera_connection_fragment.xml
    src/genesis/tensorflow/inference/android/res/layout-land/camera_connection_fragment.xml
    src/genesis/tensorflow/inference/android/res/values/attrs.xml
    src/genesis/tensorflow/inference/android/res/values/base-strings.xml
    src/genesis/tensorflow/inference/android/res/values/colors.xml
    src/genesis/tensorflow/inference/android/res/values/strings.xml
    src/genesis/tensorflow/inference/android/res/values/styles.xml
    src/genesis/tensorflow/inference/android/res/values/template-dimens.xml
    src/genesis/tensorflow/inference/android/res/values/template-styles.xml
    src/genesis/tensorflow/inference/android/res/values-sw600dp/template-dimens.xml
    src/genesis/tensorflow/inference/android/res/values-sw600dp/template-styles.xml
    src/genesis/tensorflow/inference/android/res/values-v11/styles.xml
    src/genesis/tensorflow/inference/android/res/values-v11/template-styles.xml
    src/genesis/tensorflow/inference/android/res/values-v14/styles.xml
    src/genesis/tensorflow/inference/android/res/values-v21/base-colors.xml
    src/genesis/tensorflow/inference/android/res/values-v21/base-template-styles.xml
    src/genesis/tensorflow/inference/android/src/org/tensorflow/demo/env/ImageUtils.java
    src/genesis/tensorflow/inference/android/src/org/tensorflow/demo/env/Logger.java
    src/genesis/tensorflow/inference/android/src/org/tensorflow/demo/AutoFitTextureView.java
    src/genesis/tensorflow/inference/android/src/org/tensorflow/demo/CameraActivity.java
    src/genesis/tensorflow/inference/android/src/org/tensorflow/demo/CameraConnectionFragment.java
    src/genesis/tensorflow/inference/android/src/org/tensorflow/demo/Classifier.java
    src/genesis/tensorflow/inference/android/src/org/tensorflow/demo/RecognitionScoreView.java
    src/genesis/tensorflow/inference/android/src/org/tensorflow/demo/TensorflowClassifier.java
    src/genesis/tensorflow/inference/android/src/org/tensorflow/demo/TensorflowImageListener.java
    src/genesis/tensorflow/inference/android/__init__.py
    src/genesis/tensorflow/inference/android/AndroidManifest.xml
    src/genesis/tensorflow/inference/android/BUILD
    src/genesis/tensorflow/inference/android/README.md
    src/genesis/tensorflow/train/__init__.py
    src/genesis/tensorflow/train/BUILD
    src/genesis/tensorflow/train/fully_connected_feed.py
    src/genesis/tensorflow/train/input_data.py
    src/genesis/tensorflow/train/mnist.py
    src/genesis/tensorflow/train/mnist_softmax.py
    src/genesis/tensorflow/train/mnist_with_summaries.py
    src/genesis/test/BUILD
    src/genesis/tools/archive_data.sh
    src/genesis/tools/handnet_test.sh
    src/genesis/tools/handnet_time.sh
    src/genesis/tools/handnet_train.sh
    src/genesis/tools/mnist_train.sh
    src/genesis/tools/pull_data.sh
    src/genesis/tools/save_model.sh
    src/genesis/visualization/shaders/fullscreen_quad.vert
    src/genesis/visualization/shaders/passthrough.vert
    src/genesis/visualization/shaders/texture.frag
    src/genesis/visualization/shaders/texture_undistort.frag
    src/genesis/visualization/BUILD
    src/genesis/visualization/gl_utils.cc
    src/genesis/visualization/gl_utils.h
    src/genesis/visualization/gl_window.cc
    src/genesis/visualization/gl_window.h
    src/genesis/visualization/image_viewer.cc
    src/genesis/visualization/image_viewer.h
    src/genesis/visualization/texture_shader.cc
    src/genesis/visualization/texture_shader.h
    src/genesis/visualization/undistorted_texture_shader.cc
    src/genesis/visualization/undistorted_texture_shader.h
    src/genesis/visualization/visualizer.cc
    src/genesis/visualization/visualizer.h
    src/genesis/visualization/visualizer_main.cc)

add_executable(blaze_root ${SOURCE_FILES})